pujar punts 3-4 versió beta

--- a/nlp_alvaro.ipynb
+++ b/nlp_alvaro.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "id": "dee0d982",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,6 +45,11 @@
     "import string\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
+    "from transformers import pipeline\n",
+    "# %pip install hf_xet\n",
+    "# import torch\n",
+    "# %pip install torch\n",
+    "\n",
     "\n",
     "# # Descargar recursos necesarios de NLTK\n",
     "nltk.download('punkt_tab')\n",
@@ -54,33 +59,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
+   "id": "8524b6d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_summary(article_text):\n",
+    "    summarizer = pipeline(\"summarization\", model=\"facebook/bart-large-cnn\")\n",
+    "    \n",
+    "    # BART tiene límite de tokens, cortar si el texto es muy largo\n",
+    "    article_text = article_text[:1024]\n",
+    "    \n",
+    "    summary = summarizer(article_text, max_length=130, min_length=50, do_sample=False)\n",
+    "    return summary[0]['summary_text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "d8772ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def huggingface_classifier(data):\n",
+    "    from transformers import pipeline\n",
+    "\n",
+    "    # Crear pipeline\n",
+    "    classifier = pipeline(\"zero-shot-classification\", model=\"facebook/bart-large-mnli\")\n",
+    "\n",
+    "    # Important si el text es en anglés, posar els topics també en anglés\n",
+    "\n",
+    "    # Definició dels temes que pot tenir l'article\n",
+    "    # possible_labels = [\"política\", \"deportes\", \"economía\", \"ciencia\", \"noticias\",\"tecnología\", \"salud\", \"cultura\", \"guerra\", \"internacional\"]\n",
+    "    \n",
+    "    possible_labels = [\"politics\", \"sports\", \"economy\", \"science\", \"news\", \"technology\", \"health\", \"culture\", \"war\", \"international\"]\n",
+    "\n",
+    "\n",
+    "    article_text = \" \".join(data)[:500]\n",
+    "    result = classifier(article_text, candidate_labels=possible_labels)\n",
+    "\n",
+    "    print(\"Tema más probable:\", result['labels'][0])\n",
+    "    print(\"Scores:\", list(zip(result['labels'], result['scores'])))\n",
+    "\n",
+    "    # Retornar resultado completo por si se quiere usar después\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "45ad73fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def title_article_preprocessing_a(clean_text):\n",
-    "    # 1. Tokenizar el texto\n",
-    "    tokens = word_tokenize(clean_text, language='spanish')\n",
+    "\n",
+    "    # 1. Toeknize del texte\n",
+    "    # tokens = word_tokenize(clean_text, language='spanish')\n",
+    "    tokens = word_tokenize(clean_text, language='english')\n",
     "    \n",
-    "    # 2. Normalizar: pasar a minúsculas y quitar puntuación\n",
+    "    # 2. Normalitzar a minúscules i eliminar puntuació\n",
     "    tokens = [t.lower() for t in tokens if t.isalpha()]  # solo palabras\n",
     "    \n",
-    "    # 3. Eliminar palabras vacías (stopwords)\n",
+    "    # 3. Eliminar stopweords\n",
     "    stop_words = set(stopwords.words('spanish'))\n",
     "    tokens = [t for t in tokens if t not in stop_words]\n",
     "    \n",
-    "    print(tokens[:50])  # mostrar los primeros 50 tokens procesados\n",
+    "    \n",
+    "    print(tokens[:50]) \n",
+    "\n",
+    "    return tokens\n",
     "\n",
     "\n",
     "def title_article_preprocessing_b(clean_text):\n",
+    "    # ToDo: Implementar otra funcion de procesameinto de texto diferente \n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "id": "2c56b209",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "url = \"https://link.springer.com/article/10.1186/s12915-020-00925-x\"\n",
+    "\n",
+    "opcio = input(\"Selecciona opció A o B\")\n",
+    "\n",
+    "\n",
+    "def scrape_text(url, opcio):\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "    \n",
+    "    # 1. Intentar <article>\n",
+    "    article = soup.find(\"article\")\n",
+    "    if article:\n",
+    "        text = article.get_text(separator=\"\\n\")\n",
+    "    else:\n",
+    "        # 2. Intentar <main>\n",
+    "        main = soup.find(\"main\")\n",
+    "        if main:\n",
+    "            text = main.get_text(separator=\"\\n\")\n",
+    "        else:\n",
+    "            # 3. Fallback: todos los <p>, unir el bloque más largo\n",
+    "            paragraphs = soup.find_all(\"p\")\n",
+    "            blocks = []\n",
+    "            current_block = []\n",
+    "            for p in paragraphs:\n",
+    "                current_block.append(p.get_text())\n",
+    "                # Separar bloques grandes por lógica simple\n",
+    "                if len(current_block) > 3:  \n",
+    "                    blocks.append(\"\\n\".join(current_block))\n",
+    "                    current_block = []\n",
+    "            if current_block:\n",
+    "                blocks.append(\"\\n\".join(current_block))\n",
+    "            # Elegir el bloque más largo (probable artículo)\n",
+    "            text = max(blocks, key=len) if blocks else \"\"\n",
+    "    \n",
+    "    # Limpiar líneas vacías\n",
+    "    lines = [line.strip() for line in text.splitlines() if line.strip()]\n",
+    "    clean_text = \"\\n\".join(lines)\n",
+    "    \n",
+    "\n",
+    "    print(clean_text[:1000])  # Mostrar solo los primeros 1000 caracteres\n",
+    "    if opcio == \"A\":\n",
+    "        data = title_article_preprocessing_a(clean_text)\n",
+    "    elif opcio == \"B\":\n",
+    "        data = title_article_preprocessing_b(clean_text)\n",
+    "    else:\n",
+    "        print(\"Opció no vàlida\")\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5a0f561c",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +277,7 @@
       "6\n",
       "na1\n",
       "Show authors\n",
-      "6436\n",
+      "6441\n",
       "Accesses\n",
       "47\n",
       "Citations\n",
@@ -166,67 +289,131 @@
       "Repetitive DNA sequences, including transposable elements (TEs) and tand\n",
       "['home', 'bmc', 'biology', 'article', 'comparative', 'analysis', 'of', 'morabine', 'grasshopper', 'genomes', 'reveals', 'highly', 'abundant', 'transposable', 'elements', 'and', 'rapidly', 'proliferating', 'satellite', 'dna', 'repeats', 'research', 'article', 'open', 'access', 'published', 'december', 'volume', 'article', 'number', 'cite', 'this', 'article', 'you', 'have', 'full', 'access', 'to', 'this', 'open', 'access', 'article', 'download', 'pdf', 'save', 'article', 'view', 'saved', 'research', 'bmc']\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tema más probable: science\n",
+      "Scores: [('science', 0.6480868458747864), ('news', 0.09028579294681549), ('economy', 0.07996293902397156), ('technology', 0.04925379902124405), ('culture', 0.03950726240873337), ('health', 0.03777254372835159), ('international', 0.029102083295583725), ('war', 0.014171305112540722), ('sports', 0.007388153579086065), ('politics', 0.0044692582450807095)]\n",
+      "{'sequence': 'home bmc biology article comparative analysis of morabine grasshopper genomes reveals highly abundant transposable elements and rapidly proliferating satellite dna repeats research article open access published december volume article number cite this article you have full access to this open access article download pdf save article view saved research bmc biology aims and scope submit manuscript comparative analysis of morabine grasshopper genomes reveals highly abundant transposable elements a', 'labels': ['science', 'news', 'economy', 'technology', 'culture', 'health', 'international', 'war', 'sports', 'politics'], 'scores': [0.6480868458747864, 0.09028579294681549, 0.07996293902397156, 0.04925379902124405, 0.03950726240873337, 0.03777254372835159, 0.029102083295583725, 0.014171305112540722, 0.007388153579086065, 0.0044692582450807095]}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d9083637abc47768e1dfcc4112bc7eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   4%|3         | 62.9M/1.63G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e4ce4db8eed4cbe83f03bd7e81e9ff7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/363 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c07c5ac66954c11b6dbe04f497ff801",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "72a11f9d6f8a4856a3575138637ee30a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f9682f441d046789f596bfdc958f5c3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary:  comparative analysis of morabine grasshopper genomes reveals highly abundant transposable elements and rapidly proliferating satellite dna repeats. Grasshoppers have large genomes averaging gb that contain high proporti. repetitive dna sequences are found in high proportion in organisms across the tree of life.\n"
+     ]
     }
    ],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
+    "def main():\n",
     "\n",
-    "url = \"https://link.springer.com/article/10.1186/s12915-020-00925-x\"\n",
+    "    data = scrape_text(url, opcio)\n",
+    "    results = huggingface_classifier(data)\n",
+    "    print(results)\n",
+    "    text = generate_summary(\" \".join(data))\n",
+    "    print(\"Summary:\", text)\n",
     "\n",
-    "opcio = input(\"Selecciona opció A o B\")\n",
-    "\n",
-    "\n",
-    "def scrape_text(url, opcio):\n",
-    "    response = requests.get(url)\n",
-    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "    \n",
-    "    # 1. Intentar <article>\n",
-    "    article = soup.find(\"article\")\n",
-    "    if article:\n",
-    "        text = article.get_text(separator=\"\\n\")\n",
-    "    else:\n",
-    "        # 2. Intentar <main>\n",
-    "        main = soup.find(\"main\")\n",
-    "        if main:\n",
-    "            text = main.get_text(separator=\"\\n\")\n",
-    "        else:\n",
-    "            # 3. Fallback: todos los <p>, unir el bloque más largo\n",
-    "            paragraphs = soup.find_all(\"p\")\n",
-    "            blocks = []\n",
-    "            current_block = []\n",
-    "            for p in paragraphs:\n",
-    "                current_block.append(p.get_text())\n",
-    "                # Separar bloques grandes por lógica simple\n",
-    "                if len(current_block) > 3:  \n",
-    "                    blocks.append(\"\\n\".join(current_block))\n",
-    "                    current_block = []\n",
-    "            if current_block:\n",
-    "                blocks.append(\"\\n\".join(current_block))\n",
-    "            # Elegir el bloque más largo (probable artículo)\n",
-    "            text = max(blocks, key=len) if blocks else \"\"\n",
-    "    \n",
-    "    # Limpiar líneas vacías\n",
-    "    lines = [line.strip() for line in text.splitlines() if line.strip()]\n",
-    "    clean_text = \"\\n\".join(lines)\n",
-    "    \n",
-    "\n",
-    "    print(clean_text[:1000])  # Mostrar solo los primeros 1000 caracteres\n",
-    "    if opcio == \"A\":\n",
-    "        title_article_preprocessing_a(clean_text)\n",
-    "    elif opcio == \"B\":\n",
-    "        title_article_preprocessing_b(clean_text)\n",
-    "    else:\n",
-    "        print(\"Opció no vàlida\")\n",
-    "\n",
-    "\n",
-    "scrape_text(url, opcio)\n"
+    "main()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a0f561c",
+   "id": "4991fff8",
    "metadata": {},
    "outputs": [],
    "source": []
