netejar text, fer un pla d'execució, i scraper pt2

--- a/nlp_alvaro.ipynb
+++ b/nlp_alvaro.ipynb
@@ -1,19 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "da624fd7",
-   "metadata": {},
-   "source": [
-    "# 1. Agafar el text d'una web"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 132,
    "id": "dee0d982",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: readability-lxml in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (0.8.4.1)\n",
+      "Requirement already satisfied: chardet in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from readability-lxml) (4.0.0)\n",
+      "Requirement already satisfied: lxml[html_clean] in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from readability-lxml) (5.3.0)\n",
+      "Requirement already satisfied: cssselect in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from readability-lxml) (1.2.0)\n",
+      "Requirement already satisfied: lxml_html_clean in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from lxml[html_clean]->readability-lxml) (0.4.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -35,7 +39,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,6 +53,7 @@
     "# %pip install hf_xet\n",
     "# import torch\n",
     "# %pip install torch\n",
+    "%pip install readability-lxml\n",
     "\n",
     "\n",
     "# # Descargar recursos necesarios de NLTK\n",
@@ -59,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 133,
    "id": "8524b6d9",
    "metadata": {},
    "outputs": [],
@@ -76,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 134,
    "id": "d8772ae2",
    "metadata": {},
    "outputs": [],
@@ -84,30 +89,30 @@
     "def huggingface_classifier(data):\n",
     "    from transformers import pipeline\n",
     "\n",
-    "    # Crear pipeline\n",
+    "    # Crear pipeline i definir model\n",
     "    classifier = pipeline(\"zero-shot-classification\", model=\"facebook/bart-large-mnli\")\n",
     "\n",
     "    # Important si el text es en anglés, posar els topics també en anglés\n",
     "\n",
+    "    # Definició dels topics\n",
     "    # Definició dels temes que pot tenir l'article\n",
     "    # possible_labels = [\"política\", \"deportes\", \"economía\", \"ciencia\", \"noticias\",\"tecnología\", \"salud\", \"cultura\", \"guerra\", \"internacional\"]\n",
     "    \n",
-    "    possible_labels = [\"politics\", \"sports\", \"economy\", \"science\", \"news\", \"technology\", \"health\", \"culture\", \"war\", \"international\"]\n",
+    "    possible_labels = [\"politics\", \"sports\", \"economy\", \"science\", \"technology\", \"health\", \"culture\", \"war\", \"international\"]\n",
     "\n",
     "\n",
-    "    article_text = \" \".join(data)[:500]\n",
+    "    article_text = \" \".join(data)[:1024]\n",
     "    result = classifier(article_text, candidate_labels=possible_labels)\n",
     "\n",
-    "    print(\"Tema más probable:\", result['labels'][0])\n",
+    "    print(\"Topic més probable:\", result['labels'][0])\n",
     "    print(\"Scores:\", list(zip(result['labels'], result['scores'])))\n",
     "\n",
-    "    # Retornar resultado completo por si se quiere usar después\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "45ad73fc",
    "metadata": {},
    "outputs": [],
@@ -122,11 +127,10 @@
     "    tokens = [t.lower() for t in tokens if t.isalpha()]  # solo palabras\n",
     "    \n",
     "    # 3. Eliminar stopweords\n",
-    "    stop_words = set(stopwords.words('spanish'))\n",
+    "    stop_words = set(stopwords.words('english'))\n",
     "    tokens = [t for t in tokens if t not in stop_words]\n",
     "    \n",
-    "    \n",
-    "    print(tokens[:50]) \n",
+    "    # print(tokens[:50])\n",
     "\n",
     "    return tokens\n",
     "\n",
@@ -138,20 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 136,
    "id": "2c56b209",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "from readability import Document\n",
+    "from lxml import html\n",
     "\n",
     "url = \"https://link.springer.com/article/10.1186/s12915-020-00925-x\"\n",
     "\n",
-    "opcio = input(\"Selecciona opció A o B\")\n",
     "\n",
     "\n",
-    "def scrape_text(url, opcio):\n",
+    "def scrape_text(url):\n",
     "    response = requests.get(url)\n",
     "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
     "    \n",
@@ -182,232 +187,33 @@
     "    \n",
     "    # Limpiar líneas vacías\n",
     "    lines = [line.strip() for line in text.splitlines() if line.strip()]\n",
-    "    clean_text = \"\\n\".join(lines)\n",
-    "    \n",
-    "\n",
-    "    print(clean_text[:1000])  # Mostrar solo los primeros 1000 caracteres\n",
-    "    if opcio == \"A\":\n",
-    "        data = title_article_preprocessing_a(clean_text)\n",
-    "    elif opcio == \"B\":\n",
-    "        data = title_article_preprocessing_b(clean_text)\n",
-    "    else:\n",
-    "        print(\"Opció no vàlida\")\n",
+    "    data = \"\\n\".join(lines)\n",
     "\n",
     "    return data\n",
     "\n",
     "\n",
+    "def scrape_text_refined(url):\n",
+    "    response = requests.get(url)\n",
+    "    response.raise_for_status()\n",
+    "\n",
+    "    tree = html.fromstring(response.content)\n",
+    "\n",
+    "    # Buscar el contenedor principal del artículo (para Springer suele ser c-article-body)\n",
+    "    article_divs = tree.xpath('//div[contains(@class,\"c-article-body\")]')\n",
+    "    \n",
+    "    if article_divs:\n",
+    "        paragraphs = article_divs[0].xpath('.//p//text()')\n",
+    "        data = \"\\n\".join([p.strip() for p in paragraphs if p.strip()])\n",
+    "    else:\n",
+    "        # Fallback: todos los <p> de la página\n",
+    "        paragraphs = tree.xpath('//p//text()')\n",
+    "        data = \"\\n\".join([p.strip() for p in paragraphs if p.strip()])\n",
+    "\n",
+    "\n",
+    "    return data\n",
+    "\n",
     "\n",
     "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "5a0f561c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Home\n",
-      "BMC Biology\n",
-      "Article\n",
-      "Comparative analysis of morabine grasshopper genomes reveals highly abundant transposable elements and rapidly proliferating satellite DNA repeats\n",
-      "Research article\n",
-      "Open access\n",
-      "Published:\n",
-      "21 December 2020\n",
-      "Volume 18\n",
-      ", article number\n",
-      "199\n",
-      ", (\n",
-      "2020\n",
-      ")\n",
-      "Cite this article\n",
-      "You have full access to this\n",
-      "open access\n",
-      "article\n",
-      "Download PDF\n",
-      "Save article\n",
-      "View saved research\n",
-      "BMC Biology\n",
-      "Aims and scope\n",
-      "Submit manuscript\n",
-      "Comparative analysis of morabine grasshopper genomes reveals highly abundant transposable elements and rapidly proliferating satellite DNA repeats\n",
-      "Download PDF\n",
-      "Octavio M. Palacios-Gimenez\n",
-      "ORCID:\n",
-      "orcid.org/0000-0002-1472-9949\n",
-      "1\n",
-      ",\n",
-      "2\n",
-      ",\n",
-      "Julia Koelman\n",
-      "1\n",
-      ",\n",
-      "Marc Palmada-Flores\n",
-      "1\n",
-      ",\n",
-      "Tessa M. Bradford\n",
-      "3\n",
-      ",\n",
-      "4\n",
-      ",\n",
-      "Karl K. Jones\n",
-      "3\n",
-      ",\n",
-      "Steven J. B. Cooper\n",
-      "3\n",
-      ",\n",
-      "4\n",
-      ",\n",
-      "Takeshi Kawakami\n",
-      "1\n",
-      ",\n",
-      "5\n",
-      "na1\n",
-      "&\n",
-      "…\n",
-      "Alexander Suh\n",
-      "1\n",
-      ",\n",
-      "2\n",
-      ",\n",
-      "6\n",
-      "na1\n",
-      "Show authors\n",
-      "6441\n",
-      "Accesses\n",
-      "47\n",
-      "Citations\n",
-      "12\n",
-      "Altmetric\n",
-      "Explore all metrics\n",
-      "Abstract\n",
-      "Background\n",
-      "Repetitive DNA sequences, including transposable elements (TEs) and tand\n",
-      "['home', 'bmc', 'biology', 'article', 'comparative', 'analysis', 'of', 'morabine', 'grasshopper', 'genomes', 'reveals', 'highly', 'abundant', 'transposable', 'elements', 'and', 'rapidly', 'proliferating', 'satellite', 'dna', 'repeats', 'research', 'article', 'open', 'access', 'published', 'december', 'volume', 'article', 'number', 'cite', 'this', 'article', 'you', 'have', 'full', 'access', 'to', 'this', 'open', 'access', 'article', 'download', 'pdf', 'save', 'article', 'view', 'saved', 'research', 'bmc']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use cpu\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tema más probable: science\n",
-      "Scores: [('science', 0.6480868458747864), ('news', 0.09028579294681549), ('economy', 0.07996293902397156), ('technology', 0.04925379902124405), ('culture', 0.03950726240873337), ('health', 0.03777254372835159), ('international', 0.029102083295583725), ('war', 0.014171305112540722), ('sports', 0.007388153579086065), ('politics', 0.0044692582450807095)]\n",
-      "{'sequence': 'home bmc biology article comparative analysis of morabine grasshopper genomes reveals highly abundant transposable elements and rapidly proliferating satellite dna repeats research article open access published december volume article number cite this article you have full access to this open access article download pdf save article view saved research bmc biology aims and scope submit manuscript comparative analysis of morabine grasshopper genomes reveals highly abundant transposable elements a', 'labels': ['science', 'news', 'economy', 'technology', 'culture', 'health', 'international', 'war', 'sports', 'politics'], 'scores': [0.6480868458747864, 0.09028579294681549, 0.07996293902397156, 0.04925379902124405, 0.03950726240873337, 0.03777254372835159, 0.029102083295583725, 0.014171305112540722, 0.007388153579086065, 0.0044692582450807095]}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d9083637abc47768e1dfcc4112bc7eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   4%|3         | 62.9M/1.63G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e4ce4db8eed4cbe83f03bd7e81e9ff7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "generation_config.json:   0%|          | 0.00/363 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c07c5ac66954c11b6dbe04f497ff801",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72a11f9d6f8a4856a3575138637ee30a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "merges.txt: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f9682f441d046789f596bfdc958f5c3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use cpu\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Summary:  comparative analysis of morabine grasshopper genomes reveals highly abundant transposable elements and rapidly proliferating satellite dna repeats. Grasshoppers have large genomes averaging gb that contain high proporti. repetitive dna sequences are found in high proportion in organisms across the tree of life.\n"
-     ]
-    }
-   ],
-   "source": [
-    "def main():\n",
-    "\n",
-    "    data = scrape_text(url, opcio)\n",
-    "    results = huggingface_classifier(data)\n",
-    "    print(results)\n",
-    "    text = generate_summary(\" \".join(data))\n",
-    "    print(\"Summary:\", text)\n",
-    "\n",
-    "main()"
    ]
   },
   {
@@ -416,7 +222,137 @@
    "id": "4991fff8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def execution_1(url):\n",
+    "    data = scrape_text(url)\n",
+    "    tokens = title_article_preprocessing_a(data)\n",
+    "    results = huggingface_classifier(tokens)\n",
+    "    resume = generate_summary(data)\n",
+    "    print(f\"Resum de l'article: {resume}\")\n",
+    "\n",
+    "\n",
+    "def execution_2(url):\n",
+    "    data = scrape_text_refined(url)\n",
+    "    tokens = title_article_preprocessing_a(data)\n",
+    "    results = huggingface_classifier(tokens)\n",
+    "    resume = generate_summary(data)\n",
+    "    print(f\"Resum de l'article: {resume}\")\n",
+    "\n",
+    "\n",
+    "def execution_3(url):\n",
+    "    data = scrape_text(url)\n",
+    "    tokens = title_article_preprocessing_b(data)\n",
+    "    results = huggingface_classifier(tokens)\n",
+    "    resume = generate_summary(data)\n",
+    "    print(f\"Resum de l'article: {resume}\")\n",
+    "\n",
+    "\n",
+    "def execution_4(url):\n",
+    "    data = scrape_text(url)\n",
+    "    tokens = title_article_preprocessing_a(data)\n",
+    "    results = train_model(tokens)\n",
+    "    resume = generate_summary(data)\n",
+    "    print(f\"Resum de l'article: {resume}\")\n",
+    "\n",
+    "\n",
+    "def execution_5(url):\n",
+    "    data = scrape_text(url)\n",
+    "    tokens = title_article_preprocessing_a(data)\n",
+    "    results = huggingface_classifier(tokens)\n",
+    "    resume = generate_summary_b(data)\n",
+    "    print(f\"Resum de l'article: {resume}\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "5a0f561c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############# Execution 1: URLhttps://link.springer.com/article/10.1186/s12915-020-00925-x\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic més probable: science\n",
+      "Scores: [('science', 0.6881455779075623), ('international', 0.07561494410037994), ('economy', 0.0668274536728859), ('culture', 0.0525495819747448), ('technology', 0.044419512152671814), ('health', 0.03472081199288368), ('war', 0.017296474426984787), ('sports', 0.01105914730578661), ('politics', 0.009366490878164768)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resum de l'article: Comparative analysis of morabine grasshopper genomes reveals highly abundant transposable elements and rapidly proliferating satellite DNA repeats. The study was published in the journal MCB Biology. For confidential support call the Samaritans on 08457 90 90 90 or visit a local Samaritans branch, see www.samaritans.org for details.\n",
+      "############# Execution 2: URLhttps://link.springer.com/article/10.1186/s12915-020-00925-x\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic més probable: science\n",
+      "Scores: [('science', 0.5759952068328857), ('international', 0.10380233079195023), ('economy', 0.08592421561479568), ('culture', 0.08271900564432144), ('technology', 0.07284616678953171), ('health', 0.03962034359574318), ('war', 0.01820867508649826), ('politics', 0.010658523067831993), ('sports', 0.010225552134215832)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resum de l'article: Repetitive DNA sequences, including transposable elements (TEs) and tandemly repeated satellite DNA (satDNAs), are found in high proportion in organisms across the Tree of Life. Grasshoppers have large genomes, averaging 9 Gb, that contain a high proportion of repetitive DNA, which has hampered progress in assembling reference genomes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "\n",
+    "    urls = [\"https://link.springer.com/article/10.1186/s12915-020-00925-x\"]\n",
+    "\n",
+    "    for url in urls:\n",
+    "        print(f\"############# Execution 1: URL{url}\")\n",
+    "        execution_1(url)\n",
+    "\n",
+    "        print(f\"############# Execution 2: URL{url}\")\n",
+    "        execution_2(url)\n",
+    "\n",
+    "\n",
+    "\n",
+    "main()"
+   ]
   }
  ],
  "metadata": {
